--- a/codefresh.yml
+++ b/codefresh.yml
@@ -4,32 +4,43 @@ stages:
   - build
   - deploy
 steps:
-  main_clone:
-    title: 'Cloning main repository...'
-    type: git-clone
-    stage: prepare
-    repo: '${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}'
-    revision: '${{CF_REVISION}}'
-    git: github-1
-  AddDependencies:
-    title: Add the dependencies
-    stage: prepare
-    image: pulumi/pulumi
-    commands:
-      - npm install
+  CreateMyPipelineContext:
+  type: parallel
+  steps:
+    main_clone:
+      title: "Cloning main repository"
+      type: git-clone
+      stage: prepare
+      repo: '${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}'
+      revision: '${{CF_REVISION}}'
+      git: github-1
+    AddDependencies:
+      title: "Add the dependencies"
+      stage: prepare
+      image: pulumi/pulumi
+      commands:
+        - npm install
+    ExportConfiguration:
+      title: "Prepare the context of your pipeline"
+      stage: prepare
+      image: codefresh/cli
+      commands:
+        - cf_export AWS_ACCESS_KEY_ID=$(codefresh get context aws_personal_dev --output=json | jq -r '.spec.data.AWS_ACCESS_KEY_ID')
+        - cf_export AWS_SECRET_ACCESS_KEY=$(codefresh get context aws_personal_dev --output=json | jq -r '.spec.data.AWS_SECRET_ACCESS_KEY')
+        - cf_export PULUMI_ACCESS_TOKEN=$(codefresh get context pulumi_token_${{CF_REPO_NAME}} --output=json | jq -r '.spec.data.PULUMI_ACCESS_TOKEN')
   DryRun:
-    title: Run a preview
+    title: "Run a preview"
     stage: build
     image: pulumi/pulumi
     commands:
       - pulumi preview --stack dev --non-interactive
   ApprovalRequest:
-    title: Ask for a validation or validate by default
+    title: "Ask for a validation or validate by default"
     stage: build
     type: pending-approval
     timeout:
       duration: 0.02 # 1min 12sec
-      finalState: approved
+      finalState: denied
   RunPulumi:
     title: Deploying
     stage: deploy
