--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "aws-ts-eks-hello-world",
     "dependencies": {
-        "@types/node": "^8.0.0",
         "@pulumi/aws": "^1.0.0",
         "@pulumi/awsx": "latest",
-        "@pulumi/kubernetes": "latest",
         "@pulumi/eks": "latest",
-        "@pulumi/pulumi": "^1.0.0"
+        "@pulumi/kubernetes": "latest",
+        "@pulumi/pulumi": "^1.0.0",
+        "@types/node": "^8.0.0",
+        "codefresh": "^0.36.0"
     }
 }
