--- a/codefresh.yml
+++ b/codefresh.yml
@@ -34,7 +34,7 @@ steps:
     image: python:latest
     commands:
       - pip install j2cli
-      - cd "${{CF_VOLUME_PATH}}/${{CF_REPO_NAME}}" && cat "test" > test.txt && j2 -o Pulumi.yaml Pulumi.yaml
+      - j2 -o Pulumi.yaml Pulumi.yaml
   DryRun:
     title: "Run a preview"
     stage: build
